third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/from-backtrace-backtrace.stderr
error: deriving From requires no fields other than source and backtrace
 --> tests/ui/from-backtrace-backtrace.rs:9:5
  |
9 |     #[from]
  |     ^^^^^^^
